# FlyTrackApp

./: LICENSE.txt  README.md
FlyTrackApp/: BoundingBoxWidget.py  CMakeLists.txt  FlightTrackerApp.py  FlightTracker_lib.cpp  ImageProjectionsWidget.py  ImageSegmentWidget.py  ModelProjectionWidget.py  ModelSelectWidget.py  ScaleModelWidget.py  find_initial_state.cpp  find_initial_state.h  flight_tracker.ipynb  flight_tracker_app.ui  flight_tracker_class.cpp  flight_tracker_class.h  flight_tracker_class.py  flight_tracker_ui.py  flight_tracker_vis_class.py  focal_grid.cpp  focal_grid.h  focal_grid_old.cpp  focal_grid_old.h  frame_loader.cpp  frame_loader.h  frames.cpp  frames.h  image_segmentation.cpp  image_segmentation.h  model.h  model_class.cpp  model_class.h  model_param_selection.py  model_param_selection2.py  multi_body_icp.cpp  multi_body_icp.h  session_param.h  vox_grid.h
FlyTrackApp/cmake/Modules/: BuildBoost.cmake
FlyTrackApp/models/: save_model_dat_file.cpp
FlyTrackApp/models/drosophila_rigid_wing/: drosophila_rigid_wing.json  wing_L.stl  wing_R.stl
FlyTrackApp/models/drosophila_seg_wing/: abdomen.stl  drosophila_seg_wing.json  head.stl  thorax.stl  wing_sect_1_L.stl  wing_sect_1_R.stl  wing_sect_2_L.stl  wing_sect_2_R.stl  wing_sect_3_L.stl  wing_sect_3_R.stl  wing_sect_4_L.stl  wing_sect_4_R.stl  wing_sect_5_L.stl  wing_sect_5_R.stl
